--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset=" utf-8" />
+    <title>Bikedikhao</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      data-domain="bikedikhao.netlify.app"
+      src="https://plausible.io/js/script.js"
+    ></script>
+  </head>
 
-<head>
-  <meta charset=" utf-8">
-  <title>Bikedikhao</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
-</head>
-
-<body style="scroll-behavior: smooth;">
-  <app-root></app-root>
-</body>
-
+  <body style="scroll-behavior: smooth">
+    <app-root></app-root>
+  </body>
 </html>
